kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: mateo-ingress
 annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mateo.modelodevops.sociuschile.cl
      secretName: mateo-ingress-tls
  rules:
    - host: mateo.modelodevops.sociuschile.cl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pokeapp-service
                port:
                  number: 8080
